@@ -26,9 +26,10 @@ class AddItemsDlg(AddItemsFrm):
     #
     ##########################################################################
 
-    def __init__(self, parent = None, name = None, modal = 0, fl = 0):
+    def __init__(self, parent=None, name=None, modal=0):
         
-        AddItemsFrm.__init__(self,parent,name,modal,fl)
+        AddItemsFrm.__init__(self,parent,name,modal,
+                             Qt.WStyle_MinMax | Qt.WStyle_SysMenu)
         
         self.update_combobox("<default>")
 
